src/test/deca/extension/synt/invalid/test_invalid_16.deca
{
    int [] tab=[1.1,true];
}